RESOLVED FIXED147945
Element interaction should not be canceled when the menu is already being shown
https://bugs.webkit.org/show_bug.cgi?id=147945
Summary Element interaction should not be canceled when the menu is already being shown
Enrica Casucci
Reported 2015-08-12 12:20:58 PDT
Attachments
Patch (3.15 KB, patch)
2015-08-12 12:25 PDT, Enrica Casucci
bdakin: review+
Enrica Casucci
Comment 1 2015-08-12 12:25:59 PDT
Enrica Casucci
Comment 2 2015-08-12 12:30:03 PDT
Committed revision 188349
Note You need to log in before you can comment on or make changes to this bug.