Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm
@@ -3382,7 +3382,8 @@ static bool isAssistableInputType(InputType type)
 {
     [self _addDefaultGestureRecognizers];
 
-    _page->stopInteraction();
+    if (![_actionSheetAssistant isShowingSheet])
+        _page->stopInteraction();
 }
 
 - (void)_previewItemController:(UIPreviewItemController *)controller didDismissPreview:(UIViewController *)viewController committing:(BOOL)committing
